--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "gatsby": "^2.24.61",
+    "gatsby-plugin-postcss": "^2.3.12",
+    "gatsby-plugin-sass": "^2.3.13",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
