--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-transformer-sharp": "^2.5.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-anime": "^3.0.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-socks": "^2.1.0",
