--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-anime": "^3.0.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-socks": "^2.1.0",
     "tailwindcss": "^1.4.6",
     "unstated-next": "^1.1.0"
