--- a/package.json
+++ b/package.json
@@ -1,47 +1,60 @@
 {
-  "name": "catalanochristian",
+  "name": "gatsby-starter-default",
   "private": true,
-  "description": "Personal Site",
+  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Christian Catalano",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "antd": "^4.3.5",
-    "emotion": "^10.0.27",
-    "framer-motion": "^1.11.1",
-    "gatsby": "^2.23.12",
-    "gatsby-image": "^2.4.9",
-    "gatsby-plugin-manifest": "^2.4.14",
-    "gatsby-plugin-offline": "^3.2.13",
-    "gatsby-plugin-postcss": "^2.3.6",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.6",
-    "gatsby-plugin-sharp": "^2.6.14",
-    "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-transformer-sharp": "^2.5.7",
+    "@fontsource/aileron": "^4.5.3",
+    "@types/react-helmet": "^6.1.5",
+    "gatsby": "^4.17.2",
+    "gatsby-cli": "^4.3.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-google-gtag": "^4.17.0",
+    "gatsby-plugin-google-tagmanager": "^4.17.0",
+    "gatsby-plugin-manifest": "^4.17.0",
+    "gatsby-plugin-offline": "^5.17.0",
+    "gatsby-plugin-postcss": "^5.17.0",
+    "gatsby-plugin-purgecss": "^6.1.2",
+    "gatsby-plugin-react-helmet": "^5.17.0",
+    "gatsby-plugin-sharp": "^4.17.0",
+    "gatsby-source-filesystem": "^4.17.0",
+    "gatsby-transformer-sharp": "^4.17.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-anime": "^3.0.3",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-anime": "^4.1.1",
+    "react-crossfade-image": "^1.2.0",
+    "react-device-detect": "^2.2.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "react-socks": "^2.1.0",
-    "tailwindcss": "^1.4.6",
-    "unstated-next": "^1.1.0"
+    "react-icons": "^4.4.0",
+    "react-switch": "^7.0.0",
+    "shell-quote": "^1.7.3"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "prettier": "2.0.5"
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.4"
   },
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
+  "license": "0BSD",
   "scripts": {
     "build": "npm run clean && gatsby build",
-    "serve": "npm run build && gh-pages -d public",
-    "develop": "npm run clean && gatsby develop",
+    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
-    "clean": "gatsby clean"
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
