--- a/package.json
+++ b/package.json
@@ -6,36 +6,33 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@fontsource/aileron": "^4.5.3",
-    "@fontsource/catamaran": "^4.5.7",
-    "@types/react-helmet": "^6.1.5",
-    "gatsby": "^4.17.2",
+    "@fontsource/catamaran": "^4.5.9",
+    "@fontsource/didact-gothic": "^4.5.0",
+    "@fontsource/montserrat": "^4.5.13",
+    "@types/react-helmet": "^6.1.4",
+    "gatsby": "^4.19.0",
     "gatsby-cli": "^4.3.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-google-gtag": "^4.17.0",
-    "gatsby-plugin-google-tagmanager": "^4.17.0",
-    "gatsby-plugin-manifest": "^4.17.0",
-    "gatsby-plugin-offline": "^5.17.0",
+    "gatsby-plugin-google-gtag": "^4.8.0",
+    "gatsby-plugin-google-tagmanager": "^4.4.0",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-manifest": "^4.3.0",
+    "gatsby-plugin-offline": "^5.3.0",
     "gatsby-plugin-postcss": "^5.17.0",
-    "gatsby-plugin-purgecss": "^6.1.2",
-    "gatsby-plugin-react-helmet": "^5.17.0",
-    "gatsby-plugin-sharp": "^4.17.0",
-    "gatsby-source-filesystem": "^4.17.0",
-    "gatsby-transformer-sharp": "^4.17.0",
+    "gatsby-plugin-purgecss": "^6.1.0",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-plugin-sitemap": "^5.24.0",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-animate-on-scroll": "^2.1.5",
-    "react-anime": "^4.1.1",
-    "react-crossfade-image": "^1.2.0",
-    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.4.0",
-    "react-switch": "^7.0.0",
-    "shell-quote": "^1.7.3"
+    "react-icons": "^4.3.1",
+    "react-switch": "^7.0.0"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
-    "prettier": "^2.7.1",
+    "prettier": "2.5.0",
     "tailwindcss": "^3.1.4"
   },
   "keywords": [
@@ -44,12 +41,13 @@
   "license": "0BSD",
   "scripts": {
     "build": "npm run clean && gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0",
+    "developLocally": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public"
   },
   "repository": {
     "type": "git",
