--- a/package.json
+++ b/package.json
@@ -10,30 +10,32 @@
     "@fontsource/didact-gothic": "^4.5.0",
     "@fontsource/montserrat": "^4.5.13",
     "@types/react-helmet": "^6.1.4",
-    "gatsby": "^4.19.0",
-    "gatsby-cli": "^4.3.0",
+    "gatsby": "^5.1.0",
+    "gatsby-cli": "^5.1.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-google-gtag": "^4.8.0",
-    "gatsby-plugin-google-tagmanager": "^4.4.0",
-    "gatsby-plugin-image": "^2.24.0",
-    "gatsby-plugin-manifest": "^4.3.0",
-    "gatsby-plugin-offline": "^5.3.0",
-    "gatsby-plugin-postcss": "^5.17.0",
+    "gatsby-plugin-google-gtag": "^5.1.0",
+    "gatsby-plugin-google-tagmanager": "^5.1.0",
+    "gatsby-plugin-image": "^3.1.0",
+    "gatsby-plugin-manifest": "^5.1.0",
+    "gatsby-plugin-offline": "^6.1.0",
+    "gatsby-plugin-postcss": "^6.1.0",
     "gatsby-plugin-purgecss": "^6.1.0",
-    "gatsby-plugin-sharp": "^4.24.0",
-    "gatsby-plugin-sitemap": "^5.24.0",
-    "gatsby-source-filesystem": "^4.24.0",
-    "gatsby-transformer-sharp": "^4.24.0",
+    "gatsby-plugin-sharp": "^5.1.0",
+    "gatsby-plugin-sitemap": "^6.1.0",
+    "gatsby-source-filesystem": "^5.1.0",
+    "gatsby-transformer-json": "^5.1.0",
+    "gatsby-transformer-sharp": "^5.1.0",
+    "gatsby-transformer-yaml": "^5.1.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-switch": "^7.0.0"
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "prettier": "2.5.0",
-    "tailwindcss": "^3.1.4"
+    "gh-pages": "^4.0.0",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4"
   },
   "keywords": [
     "gatsby"
