More project info

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -41,7 +41,7 @@
         "slug": "game-of-life",
         "name": "Conway's Game of Life", 
         "description": "",
-        "link": "https://github.com/cc0407/stars-arcade", 
+        "link": "https://github.com/cc0407/Conways-Game-of-Life", 
         "target":"_blank"
     },
     {
