migrated to react, firebase

--- a/package.json
+++ b/package.json
@@ -5,57 +5,51 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@fontsource/aileron": "^4.5.3",
     "@fontsource/catamaran": "^4.5.9",
     "@fontsource/didact-gothic": "^4.5.0",
     "@fontsource/montserrat": "^4.5.13",
-    "@types/react-helmet": "^6.1.4",
-    "gatsby": "^5.1.0",
-    "gatsby-cli": "^5.1.0",
-    "gatsby-image": "^3.11.0",
-    "gatsby-plugin-google-gtag": "^5.1.0",
-    "gatsby-plugin-google-tagmanager": "^5.1.0",
-    "gatsby-plugin-image": "^3.1.0",
-    "gatsby-plugin-manifest": "^5.1.0",
-    "gatsby-plugin-offline": "^6.1.0",
-    "gatsby-plugin-postcss": "^6.1.0",
-    "gatsby-plugin-purgecss": "^6.1.0",
-    "gatsby-plugin-sharp": "^5.1.0",
-    "gatsby-plugin-sitemap": "^6.1.0",
-    "gatsby-source-filesystem": "^5.1.0",
-    "gatsby-transformer-json": "^5.1.0",
-    "gatsby-transformer-sharp": "^5.1.0",
-    "gatsby-transformer-yaml": "^5.1.0",
-    "prop-types": "^15.7.2",
+    "@types/node": "^16.18.75",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-helmet": "^6.1.11",
+    "antd": "^5.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.3.1",
-    "react-switch": "^7.0.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.1.0",
+    "react-router-dom": "^6.21.3",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "clean": "react-scripts clean"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.2.4"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
-  "scripts": {
-    "build": "npm run clean && gatsby build",
-    "develop": "gatsby develop -H 0.0.0.0",
-    "developLocally": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "npm-run-all": "^4.1.5"
   }
 }
