--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-slick": "^0.23.13",
     "antd": "^5.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,8 @@
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
