--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
+  "homepage": "https://cc0407.github.io",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
@@ -18,6 +19,7 @@
     "@types/react-helmet": "^6.1.11",
     "@types/react-slick": "^0.23.13",
     "antd": "^5.13.2",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -35,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "clean": "react-scripts clean"
+    "clean": "react-scripts clean",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
